some fixes Rentalservice